新增了负载均衡灰度流量的处理逻辑，用于在进行Feign请求时根据用户请求的X-Developer头路由到正确的微服务上，避免其他服务干扰

--- a/wisepen-common/pom.xml
+++ b/wisepen-common/pom.xml
@@ -79,6 +79,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
