--- a/wisepen-system-service/wisepen-system-biz/pom.xml
+++ b/wisepen-system-service/wisepen-system-biz/pom.xml
@@ -53,7 +53,14 @@
             <version>1.37.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
+
+
 
     <build>
         <plugins>
