--- a/wisepen-user-service/wisepen-user-api/pom.xml
+++ b/wisepen-user-service/wisepen-user-api/pom.xml
@@ -18,6 +18,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Spring Boot Validation Starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
@@ -33,5 +39,6 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+
     </dependencies>
 </project>
